--- a/res/layout/dynamic_list_item.xml
+++ b/res/layout/dynamic_list_item.xml
@@ -65,7 +65,6 @@
                 android:text="双子座"
                 android:textColor="@color/color_4"
                 android:textSize="@dimen/new_size_1" />
-
         </LinearLayout>
 
         <TextView
@@ -101,7 +100,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/d3_56" />
-
         </LinearLayout>
 
         <RelativeLayout
@@ -114,9 +112,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="40dp"
-                android:visibility="gone"
                 android:text="+ 1"
-                android:textColor="@color/bt_green" />
+                android:textColor="@color/bt_green"
+                android:visibility="gone" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -168,8 +166,32 @@
                     android:layout_marginRight="10dp"
                     android:src="@drawable/d3_46" />
             </RelativeLayout>
-
         </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_dynamic_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@color/main_grey"
+            android:visibility="gone"
+            android:orientation="vertical" >
+
+            <EditText
+                android:id="@+id/et_dynamic_message"
+                android:layout_width="252dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:text="我在等你: "
+                android:padding="8dp"
+                android:background="@null"
+                android:textColor="@color/color_5"
+                android:textSize="@dimen/new_size_1" >
+
+                <requestFocus />
+            </EditText>
+
+        </LinearLayout>
 
     </LinearLayout>
 
