--- a/res/layout/register_second_layout.xml
+++ b/res/layout/register_second_layout.xml
@@ -7,198 +7,198 @@
 
     <include layout="@layout/main_top_layout" />
 
-    <FrameLayout
+    <ScrollView
+        android:id="@+id/scrollView1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent" 
+        android:fillViewport="true"
+        >
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <ImageView
-                android:id="@+id/iv_register_head"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/register_upload_head" />
+            android:layout_height="match_parent" >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:background="@color/white"
-                android:focusable="true"
-                android:orientation="vertical"
-                android:paddingBottom="10dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="15dp" >
+                android:orientation="vertical" >
 
-                <RelativeLayout
-                    android:id="@+id/rl_register_data"
+                <ImageView
+                    android:id="@+id/iv_register_head"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:src="@drawable/register_upload_head" />
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:background="@color/white"
+                    android:focusable="true"
+                    android:orientation="vertical"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="15dp" >
+
+                    <RelativeLayout
+                        android:id="@+id/rl_register_data"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" >
+
+                        <TextView
+                            android:id="@+id/textView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableLeft="@drawable/register_birthday"
+                            android:drawablePadding="10dp"
+                            android:gravity="center"
+                            android:padding="5dp"
+                            android:text="@string/register_choose_bir"
+                            android:textColor="@color/color_4"
+                            android:textSize="@dimen/new_size_2" />
+
+                        <TextView
+                            android:id="@+id/tv_register_data"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="20dp"
+                            android:drawablePadding="5dp"
+                            android:drawableRight="@drawable/main_go_ahead" />
+                    </RelativeLayout>
 
                     <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawableLeft="@drawable/register_birthday"
-                        android:drawablePadding="10dp"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="@string/register_choose_bir"
-                        android:textColor="@color/color_4"
-                        android:textSize="@dimen/new_size_2" />
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@color/spilt_line_color" />
 
-                    <TextView
-                        android:id="@+id/tv_register_data"
+                    <RadioGroup
+                        android:id="@+id/rg_register_sex"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
-                        android:drawablePadding="5dp"
-                        android:drawableRight="@drawable/main_go_ahead"
-                         />
-                </RelativeLayout>
+                        android:layout_marginTop="10dp"
+                        android:contentDescription="性别"
+                        android:orientation="horizontal" >
+
+                        <RadioButton
+                            android:id="@+id/rb_register_man"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="男"
+                            android:textColor="@color/color_4"
+                            android:textSize="@dimen/new_size_2" />
+
+                        <RadioButton
+                            android:id="@+id/rb_register_women"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="40dp"
+                            android:checked="true"
+                            android:text="女"
+                            android:textColor="@color/color_4"
+                            android:textSize="@dimen/new_size_2" />
+                    </RadioGroup>
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:layout_marginTop="5dp"
                     android:background="@color/spilt_line_color" />
 
-                <RadioGroup
-                    android:id="@+id/rg_register_sex"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="10dp"
-                    android:contentDescription="性别"
-                    android:orientation="horizontal" >
+                    android:layout_marginTop="20dp" >
 
                     <RadioButton
-                        android:id="@+id/rb_register_man"
+                        android:id="@+id/bt_register_second_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="男"
+                        android:background="@drawable/btn_register_1"
+                        android:button="@null"
+                        android:checked="true" />
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_toRightOf="@+id/bt_register_second_1"
+                        android:text="@string/register_bt_1"
                         android:textColor="@color/color_4"
                         android:textSize="@dimen/new_size_2" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp" >
 
                     <RadioButton
-                        android:id="@+id/rb_register_women"
+                        android:id="@+id/bt_register_second_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="40dp"
-                        android:checked="true"
-                        android:text="女"
+                        android:background="@drawable/btn_register_2"
+                        android:button="@null" />
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_toRightOf="@+id/bt_register_second_2"
+                        android:text="@string/register_bt_2"
                         android:textColor="@color/color_4"
                         android:textSize="@dimen/new_size_2" />
+                </RelativeLayout>
 
-                </RadioGroup>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp" >
+
+                    <RadioButton
+                        android:id="@+id/bt_register_second_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/btn_register_3"
+                        android:button="@null" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_toRightOf="@+id/bt_register_second_3"
+                        android:text="@string/register_bt_3"
+                        android:textColor="@color/color_4"
+                        android:textSize="@dimen/new_size_2" />
+                </RelativeLayout>
             </LinearLayout>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/spilt_line_color" />
-
-            <RelativeLayout
+            <Button
+                android:id="@+id/bt_register_second_next"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp" >
-
-               
-
-                <RadioButton
-                    android:id="@+id/bt_register_second_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_register_1" 
-                    android:button="@null"
-                    android:checked="true"
-                    />
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_toRightOf="@+id/bt_register_second_1"
-                    android:text="@string/register_bt_1"
-                    android:textColor="@color/color_4"
-                    android:textSize="@dimen/new_size_2" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp" >
-
-                <RadioButton
-                    android:id="@+id/bt_register_second_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                     android:button="@null"
-                    android:background="@drawable/btn_register_2" />
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_toRightOf="@+id/bt_register_second_2"
-                    android:text="@string/register_bt_2"
-                    android:textColor="@color/color_4"
-                    android:textSize="@dimen/new_size_2" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp" >
-
-                <RadioButton
-                    android:id="@+id/bt_register_second_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                     android:button="@null"
-                    android:background="@drawable/btn_register_3" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_toRightOf="@+id/bt_register_second_3"
-                    android:text="@string/register_bt_3"
-                    android:textColor="@color/color_4"
-                    android:textSize="@dimen/new_size_2" />
-
-            </RelativeLayout>
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/bt_register_second_next"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@drawable/btn_red"
-            android:text="@string/main_next"
-            android:textColor="@color/white" />
-    </FrameLayout>
+                android:layout_gravity="bottom"
+                android:background="@drawable/btn_red"
+                android:text="@string/main_next"
+                android:textColor="@color/white" />
+        </FrameLayout>
+    </ScrollView>
 
 </LinearLayout>
