--- a/res/layout/dynamic_list_item.xml
+++ b/res/layout/dynamic_list_item.xml
@@ -79,28 +79,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" >
+            android:orientation="horizontal" >
 
             <ImageView
-                android:id="@+id/iv_dynamic_1"
+                android:id="@+id/imageView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/d3_52" />
 
-            <ImageView
-                android:id="@+id/iv_dynamic_2"
-                android:layout_width="wrap_content"
+            <com.timetalent.client.ui.view.HorizontalListView
+                android:id="@+id/hl_dynamic"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:src="@drawable/d3_54" />
+                android:layout_marginTop="8dp" >
+            </com.timetalent.client.ui.view.HorizontalListView>
 
-            <ImageView
-                android:id="@+id/iv_dynamic_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/d3_56" />
         </LinearLayout>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -174,25 +169,23 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@color/main_grey"
-            android:visibility="gone"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:visibility="gone" >
 
             <EditText
                 android:id="@+id/et_dynamic_message"
                 android:layout_width="252dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:text="我在等你: "
-                android:padding="8dp"
                 android:background="@null"
+                android:ems="10"
+                android:padding="8dp"
+                android:text="我在等你: "
                 android:textColor="@color/color_5"
                 android:textSize="@dimen/new_size_1" >
 
                 <requestFocus />
             </EditText>
-
         </LinearLayout>
-
     </LinearLayout>
 
 </RelativeLayout>
