--- a/res/layout/pictures_item.xml
+++ b/res/layout/pictures_item.xml
@@ -13,75 +13,101 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp" >
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp" >
 
             <ImageView
                 android:id="@+id/img1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:src="@drawable/d10_16" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/f10_03" />
 
             <ImageView
                 android:id="@+id/img2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:src="@drawable/d10_16" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/f10_03" />
 
             <ImageView
                 android:id="@+id/img3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:src="@drawable/d10_16" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/f10_03" />
 
             <ImageView
                 android:id="@+id/img4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:src="@drawable/d10_16" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/f10_03" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp" >
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="4dp" >
 
             <ImageView
                 android:id="@+id/img5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:src="@drawable/d10_16" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/f10_03" />
 
             <ImageView
                 android:id="@+id/img6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:src="@drawable/d10_16" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/f10_03" />
 
             <ImageView
                 android:id="@+id/img7"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:src="@drawable/d10_16" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/f10_03" />
 
             <ImageView
                 android:id="@+id/img8"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_weight="1"
-                android:src="@drawable/d10_16" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/f10_03" />
+
         </LinearLayout>
     </LinearLayout>
 
