--- a/res/layout/my_workbaoming_item.xml
+++ b/res/layout/my_workbaoming_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:src="@drawable/f7_03" />
 
     <LinearLayout
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_weight="4"
+        android:layout_weight="7"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -77,6 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
+            android:singleLine="true"
             android:text="北京电影学院获奖作品《安慰》中女一号"
             android:textColor="@color/color_4"
             android:textSize="@dimen/new_size_3" />
