--- a/res/layout/dynamic_list_item.xml
+++ b/res/layout/dynamic_list_item.xml
@@ -82,9 +82,9 @@
             android:orientation="horizontal" >
 
             <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/iv_dynamic_test"
+                android:layout_width="60dip"
+                android:layout_height="60dip"
                 android:src="@drawable/d3_52" />
 
             <com.timetalent.client.ui.view.HorizontalListView
