--- a/res/layout/my_xingtanziliaobianjihead.xml
+++ b/res/layout/my_xingtanziliaobianjihead.xml
@@ -53,14 +53,14 @@
                     android:gravity="center_vertical" >
 
                     <ImageView
-                        android:id="@+id/imageView6"
+                        android:id="@+id/imgsex"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:src="@drawable/f_05" />
 
                     <TextView
-                        android:id="@+id/textView1"
+                        android:id="@+id/tvage1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -71,7 +71,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/tvxingzuo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
