--- a/res/layout/near_getpic.xml
+++ b/res/layout/near_getpic.xml
@@ -15,7 +15,7 @@
     android:layout_marginRight="15dp"
     android:layout_marginTop="20dp"
     android:gravity="right"
-    android:text="1/16"
+    android:text=""
     android:textColor="@color/color_3"
     android:textSize="@dimen/new_size_3" />
 
@@ -23,150 +23,6 @@
     android:id="@+id/viewFlipper1"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView01"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView02"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView03"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView04"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView05"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView06"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView07"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView08"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView09"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView10"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView11"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView12"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView13"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView14"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
-
-    <ImageView
-        android:id="@+id/ImageView15"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/f10_17" />
 
 </ViewFlipper>
 
